# SFML_Engine_Testing

./: .gitignore  CMakeLists.txt
cmake/: FindSFML.cmake
source/: main.cpp
source/Application/: Application.cpp  Application.hpp
source/Components/: Component.cpp  Component.hpp  Component.inl  MovementComponent.hpp  RenderableComponent.hpp  SteeringComponent.hpp  TransformableComponent.hpp
source/Entity/: Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  EntityManager.inl
source/EventManagement/: EventManager.cpp  EventManager.hpp  EventManager.inl  SimpleSignal.hpp
source/EventManagement/Events/: ComponentEvents.hpp  EntityEvents.hpp
source/Helpers/: MemoryPool.hpp
source/Math/: Trigonometry.hpp  VectorMath.hpp  VectorMath.inl
source/ResourceManagement/: ResourceManager.hpp  ResourceManager.inl
source/Systems/: MovementSystem.cpp  MovementSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  System.cpp  System.hpp  SystemManager.hpp  SystemManager.inl
staticAnalysis/: PVS-Studio-log.dpn  PVS-Studio-log.plog
